--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,5 +53,11 @@
      </nav>
 
      <%= yield %>
+
+     <script>
+       $(function(){
+         $(".alert").fadeOut(5000);
+       });
+     </script>
    </body>
 </html>
