--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -101,6 +101,7 @@ h1, h2 {
     .topic-text {
       padding-right: 20px;
       padding-left: 20px;
+      font-size: 20px;
     }
 
     img {
@@ -113,6 +114,18 @@ h1, h2 {
       width: 35px;
       height: 30px;
       margin-left: 20px;
+      cursor: pointer;
     }
   }
+}
+
+.comment-head {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.comment-unit {
+  padding-right: 20px;
+  padding-left: 20px;
+  font-size: 20px;
 }
