--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -21,6 +21,7 @@
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <div class="comment-form">
               <%= form_for @comment, url: comments_path do |f| %>
+                <%= hidden_field_tag :url, request.url %>
                 <%= f.hidden_field :topic_id, :value => topic.id %>
                 <div class="form-group">
                   <%= f.text_area :content, class: 'form-control' %>
